Experience section done

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed&family=Teko:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/31830f8c55.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Oswald:wght@600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
